fix responsives on mobile

--- a/shopping-list-web/src/css/App.css
+++ b/shopping-list-web/src/css/App.css
@@ -106,6 +106,7 @@ a {
 
 .home, .products, .shopping-list {
   display: flex;
+  width: 100%;
   flex-direction: row;
   flex: 1;
   text-align: center;
@@ -227,10 +228,11 @@ a {
   font-size: 1.2rem;
   font-weight: bold;
   align-items: center;
-  flex: 0.5;
+  width: 15%;
   border-right: 4px solid #FFD700;
   gap: 0.5rem;
   min-height: 100%;
+  box-sizing: border-box;
 }
 
 .left-menu > .menu:nth-child(1) {
@@ -238,7 +240,6 @@ a {
 }
 
 .left-menu > .menu {
-  width: 80%;
   padding: 1.2rem;
   color: #fff;
 }
@@ -254,12 +255,12 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  width: 100%;
+  min-height: 100%;
   background-color: #2a2929;
   color: #fff;
   align-items: center;
   gap: 1rem;
-  flex: 3;
 }
 
 .main-section {
@@ -281,13 +282,24 @@ a {
     display: none;
     flex-direction: column;
     gap: 1rem;
-    background-color: #5B5A58;
+    background-color: #3a3737;
     width: 100%;
     padding: 1rem;
     position: absolute;
     top: 5.5rem;
     left: 0;
     z-index: 999;
+  }
+
+  .home {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    background: #2a2929;
+    height: auto;
+    padding: 0;
+    margin: 0;
   }
 
   .navbar > .container > .nav-links.open {
@@ -297,18 +309,47 @@ a {
   .hamburger {
     display: block;
   }
-}
 
-/* Testing */
-table {
-  width: 300px;
-  border-collapse: collapse;
-}
-th, td {
-  padding: 8px;
-  border: 1px solid #333;
-  text-align: left;
-}
-th {
-  background-color: #f2f2f2;
+  .left-menu {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+    padding: 1rem;
+    background-color: #2a2929;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+    border: none;
+    min-height: auto;
+    height: auto;
+    margin: 0!important;
+  }
+
+  .left-menu > .menu {
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0!important;
+    padding: 1rem 1rem;
+    font-size: 1rem;
+  }
+
+  .main-view {
+    width: 100%;
+    min-height: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-section {
+    width: 90%;
+    height: auto;
+    text-align: center;
+  }
 }
